# SolanaxLeetDroid

./: .gitignore  GET_STARTED.md  README.md  RESOURCES.md  config-overrides.js  package-lock.json  package.json  tsconfig.json
program-rust/: .gitignore  Anchor.toml  package.json
program-rust/programs/solana-leetdroid/: Cargo.toml
program-rust/programs/solana-leetdroid/src/: lib.rs
program-rust/tests/: solana-leetdroid.ts
public/: index.html
src/: App.css  App.js  Const.ts  index.d.ts  index.js  showQRCode.ts
src/api/: fetchProfile.ts  getAnchorWallet.ts  getProvider.ts  getTransaction.js  getTransaction.ts  sendProfile.ts
src/api/Interfaces/: LeetCodeProfile.ts  UserProfileErrorModel.ts
src/api/Queries/: ACSubmissionNum.tsx  AllQuestionsCount.tsx  LeetCodeProfile.tsx  ProfileQuery.tsx  TotalSubmissionNum.tsx
src/components/: Button.css  Button.js  Button.tsx  CardItem.js  Cards.css  Cards.js  Footer.css  Footer.js  Footer.tsx  HowToUse.css  HowToUse.tsx  Navbar.css  Navbar.js  Navbar.tsx  Profile.css  Profile.tsx  ProfileCard.css  ProfileCard.js  ProfileCard.tsx  Welcome.css  Welcome.tsx
src/components/pages/: Home.js  HowToUsePage.js  UploadProfile.js
src/utils/: Const.ts  Errors.ts  Notifications.ts  api.json  copyText.ts  downloadProfile.ts  idl.json  scrollToView.ts  showConditions.ts
